@@ -1,6 +1,10 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Mon Feb 20 2017 Sjoerd Mullender <sjoerd@acm.org>
+- The sphinx module has been moved to its own repository
+  http://dev.monetdb.hg/hg/MonetDB-sphinx/.
+
 * Thu Jan  5 2017 Sjoerd Mullender <sjoerd@acm.org>
 - Changed the interfaces of the AUTH* functions: pass values, not pointers
   to values.
